--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -14,24 +14,21 @@
         <!-- To make this form functional, sign up at-->
         <!-- https://startbootstrap.com/solution/contact-forms-->
         <!-- to get an API token!-->
-        <form id="contactForm" action="/images" method="POST" enctype="multipart/form-data">
+         
+        <form id="contactForm" action="/images/<%= image._id %>?_method=PUT" method="POST">
             <div class="row align-items-stretch d-flex justify-content-center mb-5">
                 <div class="col-md-6">
                     <div class="form-group">
                         <!-- Name input-->
-                        <input class="form-control" name="title" id="name" type="text" placeholder="Title" data-sb-validations="required" />
+                        <input class="form-control" value="<%= image.title %>" name="title" id="name" type="text" />
                        
                     </div>
                     <div class="form-group">
                         <!-- Email address input-->
-                        <input class="form-control" name="description" id="name" type="text" placeholder="Description" data-sb-validations="required,email" />
+                        <input class="form-control" value="<%= image.description %>" name="description" id="name" type="text" />
                         
                     </div>
-                    <div class="form-group">
-                        <!-- Email address input-->
-                        <input class="form-control" name="image" type="file"/>
-                        
-                    </div>
+                    
                     
                 </div>
                 
