--- a/views/index.ejs
+++ b/views/index.ejs
@@ -51,7 +51,8 @@
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
                 <div class="row">
-                    <div class="col-lg-4 col-sm-6 mb-4">
+                    
+                    <div  class="col-lg-4 col-sm-2 mb-2">
                         <!-- Portfolio item 1-->
                          <% for(let i=0;i<images.length;i++) { %>
                         <div class="portfolio-item">
@@ -64,7 +65,7 @@
                             <div class="portfolio-caption">
                                 <div class="portfolio-caption-heading"><%= images[i].title %></div>
                                 <div class="portfolio-caption-subheading text-muted"><%= images[i].description %></div>
-                                <a  class="btn btn-primary btn-xl text-uppercase" href="/edit">Edit</a>
+                                <a  class="btn btn-primary btn-xl text-uppercase" href="/edit/<%= images[i]._id %>">Edit</a>
                             </div>
                         </div>
                         <% } %>
